--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="test.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="test.js"></script>
+
 </head>
 <body>
     <div class="header">
